--- a/07(mid_term)/2week.ipynb
+++ b/07(mid_term)/2week.ipynb
@@ -401,19 +401,83 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## SWEA 12712"
+   ],
    "metadata": {
     "collapsed": false
    },
    "id": "38aa5736dfd74001"
   },
   {
-   "cell_type": "markdown",
-   "source": [],
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Created by: minseo\n",
+    "Date: 4/16/24\n",
+    "Desc : SWEA 12712(파리퇴치3)\n",
+    "Excute time : ms(time.perf_counter())\n",
+    "'''\n",
+    "import sys\n",
+    "\n",
+    "sys.stdin = open('SWEA 12712. 파리퇴치3.txt', 'r')\n",
+    "\n",
+    "# 상 하 좌 우\n",
+    "plus_dx = [0, 0, -1, 1]\n",
+    "plus_dy = [1, -1, 0, 0]\n",
+    "# 10 2 4 8\n",
+    "x_dx = [-1, 1, 1, -1]\n",
+    "x_dy = [1, 1, -1, -1]\n",
+    "\n",
+    "# for문으로 한번에 진행하기 위해 합치기\n",
+    "plus_x_dx = []\n",
+    "plus_x_dy = []\n",
+    "plus_x_dx.append(plus_dx)\n",
+    "plus_x_dx.append(x_dx)\n",
+    "plus_x_dy.append(plus_dy)\n",
+    "plus_x_dy.append(x_dy)\n",
+    "\n",
+    "tc = int(input())\n",
+    "\n",
+    "for case in range(1, tc+1):\n",
+    "\n",
+    "    matrix_size, spray_size = map(int, input().split())\n",
+    "\n",
+    "    # 상태저장 그래프\n",
+    "    graph = [[0 for _ in range(matrix_size)] for __ in range(matrix_size)]\n",
+    "    # 결과저장 그래프\n",
+    "    result = [[-1 for _ in range(matrix_size)] for __ in range(matrix_size)]\n",
+    "\n",
+    "    for i in range(matrix_size):\n",
+    "        graph[i] = list(map(int, input().split()))\n",
+    "\n",
+    "    # 완전 탐색\n",
+    "    for i in range(matrix_size):\n",
+    "        for j in range(matrix_size):\n",
+    "            # 두가지 스프레이 방식\n",
+    "            for method in range(2):\n",
+    "                sum = 0\n",
+    "                sum += graph[j][i]\n",
+    "                # 스프레이 분사된 부분의 합\n",
+    "                for spray_depth in range(1, spray_size):\n",
+    "                    # 4가지 방향 탐색\n",
+    "                    for arrow in range(4):\n",
+    "                        new_y = j+plus_x_dy[method][arrow] * spray_depth\n",
+    "                        new_x = i+plus_x_dx[method][arrow] * spray_depth\n",
+    "                        # 범위를 넘는지 검사\n",
+    "                        if 0 <= new_y < matrix_size and 0 <= new_x < matrix_size:\n",
+    "                            sum += graph[new_y][new_x]\n",
+    "                # 스프레이 합 결과 확인 후 반영\n",
+    "                result[j][i] = max(result[j][i], sum)\n",
+    "\n",
+    "    max_value = max(map(max, result))\n",
+    "    print(f\"#{case} {max_value}\")"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "a6311a3a5da7210a"
+   "id": "ae92be58b813c88b"
   },
   {
    "cell_type": "markdown",
